<resources>
    <string name="app_name">KeepInMind</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basics_info">BasicsInfoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="bem_vindo">Seja bem-vindo</string>
    <string name="data_inicio_pil">Data do início</string>
    <string name="concordo">Concordo</string>
    <string name="txt_info">Para começar a usar o aplicativo, insira alguns dados básicos, como a data do início do comprimido e a duração do ciclo menstrual da sua parceira. Clique em Concordo para começar.</string>
    <string name="txt_termo">Termo de responsabilidade</string>
    <string name="txt_info_termo">Ao clicar em Concordo, você reconhece e concorda que o Software não oferece conselhos médicos. Este Software tem fins informativos. Consulte o médico para todas as preocupações relacionadas à saúde. Você concorda que MinervaTI não terá qualquer obrigação jurídica ou moral em relação a você, sua parceira ou a qualquer outra pessoa quanto a utilização do Software ou por sua confiança em qualquer informação produzida por ele.</string>
    <string name="p_data_inicio_pil">Qual foi o primeiro dia que sua parceira tomou a pílula?</string>
    <string name="p_ciclo_pil">Qual a duração do clico menstrual da sua parceira(21, 24 ou 28 dias)?</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Proximo</string>
    <string name="t_duracao_ciclo">Insira a duração do clico</string>
    <string name="t_duracao_menstru">Insira a duração da menstruação</string>
    <string name="p_qtde_dias_menstru">Qual a duração da menstruação da sua parceira(a média é de 4 a 7 dias)?</string>
    <string name="t_revisao">Revisão</string>
    <string name="txt_data_inicio">Data do início da pílula</string>
    <string name="txt_compri_ciclo">Comprimento do ciclo</string>
    <string name="txt_duracao_mesntru">Duração da menstruação</string>
    <string name="concluir">Concluir</string>
    <string name="erro_ao_salvar">Erro ao salvar dados!</string>
    <string name="sucesso_ao_salvar">Salvo com sucesso!</string>
    <string name="inicio_anti">Início do anticoncepcional</string>
    <string name="primeir_dia">1º Dia</string>
    <string name="msg_primeiro_dia_anti">Sua parceira iniciou ou deverá iniciar o anticoncepcional
        neste dia.</string>
    <string name="fim_anti">Fim do anticoncepcional</string>
    <string name="ultimo_dia">Último dia</string>
    <string name="msg_ultimo_dia_anti">Este deve ser o último dia, ou seja, sua parceira toma o
        último medicamento nesta data.</string>
    <string name="reinicio_anti">Reinício do anticoncepcional</string>
    <string name="dia_anti_medio_risco">Dia de médio risco</string>
    <string name="medio_risco">Médio risco</string>
    <string name="msg_medio_risco">Neste dia mantenha a cautela, não vá com muita sede ao pode. Use camisinha!</string>
    <string name="dia_anti_baixo_risco">Dia de baixo risco</string>
    <string name="baixo_risco">Baixo risco</string>
    <string name="msg_baixo_risco">Neste dia, aproveite. O risco ainda existe, porém é muito baixo.</string>
    <string name="dia_anti_tpm">Possível dia de TPM</string>
    <string name="tpm">TPM - Tensão Pré Menstrual</string>
    <string name="msg_tpm">Provavelmente sua parceira está ou estará de TPM neste dia. Não faça nada para irritar-la!</string>
    <string name="reinicio_dia">Retomada</string>
    <string name="msg_reinicio_anti">Após os dias de pausa, sua parceira começa ou deverá começar uma nova cartela neste dia.</string>
    <string name="dom">DOM</string>
    <string name="seg">SEG</string>
    <string name="ter">TER</string>
    <string name="qua">QUA</string>
    <string name="qui">QUI</string>
    <string name="sex">SEX</string>
    <string name="sab">SAB</string>
    <string name="sem_evento_nesta_data">Sem Eventos</string>
    <string name="title_activity_settings">Sobre e Ajuda</string>
    <string name="versao">Versão 1.2</string>
    <string name="all_right_reserved">All rights reserved.</string>
    <string name="keepinmind_inc">\u00A9 2016 KeepInMind App Inc</string>
    <string name="sobre">Sobre</string>
    <string name="definicoes">Definições</string>
    <string name="definicoes_subtitle">Clique aqui para alterar os dados.</string>
    <string name="editar_dados">Editar dados</string>
    <string name="alterar_dados">Alterar dados</string>
    <string name="btn_atualizar_dados">Atualizar dados</string>
    <string name="title_activity_update_dados">Alterar Dados</string>
    <string name="hint_data_inicio">Data Inicío do anticoncepcional</string>
    <string name="duracao_menstru">Duração do período menstrual (a média é de 4 a 7 dias)</string>
    <string name="duracao_ciclo">Duração do ciclo (21, 24 ou 28 dias)</string>
    <string name="hora_do_anti">Horário do medicamento.</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="avisar_sua_parceira">Notifique sua parceira...</string>
    <string name="enviar_msg_wpp">Enviar mensagem para o WhatsApp</string>
    <string name="enviar_sms">Enviar um SMS</string>
    <string name="ligar">Fazer uma ligação</string>
    <string name="lembrete_title">Lembrete</string>
    <string name="subtitle_lembrete">Este é uma alerta para você lembrar a sua parceira ingerir o medicamento.
        Escolha uma das opções abaixo para comunica-la:</string>
    <string name="informacoes_adicionais">Informações adicionais</string>
    <string name="p_dados_parc">Estes dados são somente para comunicar sua parceira sobre o lembrete do medicamento.</string>
    <string name="telefone">Telefone da parceira:</string>
    <string name="msg_padrao">Insira uma mensagem padrão:</string>
    <string name="msg_default">Mensagem Padrão</string>
    <string name="periodo_menstru">Período menstrual</string>
    <string name="menstru">Menstruação</string>
    <string name="msg_dia_menstru">A menstruação da sua parceira ocorre ou deverá ocorrer dentre estes dias.</string>

    <string-array name="values_ciclo">
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>

    <string-array name="values_menstrual">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
