<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sobre_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_degrade_linear"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/versao"
        android:textColor="@color/greyed_out"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18sp"
        android:src="@drawable/image_keepinmind" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/keepinmind_inc"
        android:textColor="@color/greyed_out"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/all_right_reserved"
        android:textColor="@color/greyed_out"
        android:textSize="18dp" />
</LinearLayout>