<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.minervati.com.br.keepinmind.fragment.DadosParceiraFragment">

    <include
        android:id="@+id/layout_blocos_welcome"
        layout="@layout/content_blocos" />

    <ScrollView
        android:id="@+id/scroll_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_blocos_welcome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/informacoes_adicionais"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/txtInfoCicloDur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtCicloDur"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/p_dados_parc"
                android:textSize="20dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ip_msg_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_msg_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/msg_padrao"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/layoutBotoesData"
        layout="@layout/content_botoes_back_next" />
</RelativeLayout>
