<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="app.minervati.com.br.keepinmind.fragment.AlertsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_nano">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_horizontal_margin_normal"
            android:src="@drawable/ic_pin_red" />

        <TextView
            android:id="@+id/tv_hora_anti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_icon"
            android:text="00:00"
            android:textSize="@dimen/common_40_dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hora_anti"
            android:layout_toRightOf="@id/iv_icon"
            android:text="@string/hora_do_anti"
            android:textSize="14dp" />

        <ToggleButton
            android:id="@+id/toggle_sim_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:textOff="@string/off"
            android:textOn="@string/on"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin_nano"
        android:layout_height="1dp"
        android:background="@color/greyed_out"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_item_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_fab_add_reminder"
        android:layout_margin="@dimen/activity_vertical_margin_normal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
    -->
</LinearLayout>
